samples/_failures_safe/1761501955_df687d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fad2553.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_1fad2553.c:143:9: error: expected declaration or statement at end of input
  143 |         }
      |         ^
./samples/SAFE/__tmp_1fad2553.c:143:9: error: expected declaration or statement at end of input
